--- a/app/program.html
+++ b/app/program.html
@@ -133,7 +133,7 @@
   </header>
 
   <!-- l-main / Main Content -->
-  <main class="l-main p-program p-program--cohesion">
+  <main class="l-main p-program p-program--egalite">
 
     <!-- b-hero / Hero Block -->
     <section class="b-hero">
@@ -307,262 +307,6 @@
 
                     <!-- Articles -->
                     <section class="c-program-list program-category__slider">
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
-                    </section>
-                </div>
-
-            </div>
-
-        </section>
-        <!-- program-category -->
-        <section class="program-category">
-
-            <!-- Wrapper -->
-            <div class="l-content">
-
-                <div class="l-d l-t l-p--modified">
-
-                    <!-- Title -->
-                    <div class="program-category__head">
-                        <h3 class="program-category__subtitle">En amont des études</h3>
-                        <h2 class="program-category__title">Programmes d’accès aux grandes Ecoles</h2>
-                        <p class="program-category__intro">Les 12 programmes Egalité des Chances ont pour objectif d’informer les jeunes de milieux modestes sur les études supérieures culturelles et artistiques et de les aider à préparer les concours d’entrée des grandes Ecoles de la Culture.</p>
-                    </div>
-
-                    <!-- Articles -->
-                    <section class="c-program-list program-category__slider">
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
-                    </section>
-                </div>
-
-            </div>
-
-        </section>
-        <!-- program-category -->
-        <section class="program-category">
-
-            <!-- Wrapper -->
-            <div class="l-content">
-
-                <div class="l-d l-t l-p--modified">
-
-                    <!-- Title -->
-                    <div class="program-category__head">
-                        <h3 class="program-category__subtitle">En amont des études</h3>
-                        <h2 class="program-category__title">Programmes d’accès aux grandes Ecoles</h2>
-                        <p class="program-category__intro">Les 12 programmes Egalité des Chances ont pour objectif d’informer les jeunes de milieux modestes sur les études supérieures culturelles et artistiques et de les aider à préparer les concours d’entrée des grandes Ecoles de la Culture.</p>
-                    </div>
-
-                    <!-- Articles -->
-                    <section class="c-program-list program-category__slider">
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
-                    </section>
-                </div>
-
-            </div>
-
-        </section>
-        <!-- program-category -->
-        <section class="program-category">
-
-            <!-- Wrapper -->
-            <div class="l-content">
-
-                <div class="l-d l-t l-p--modified">
-
-                    <!-- Title -->
-                    <div class="program-category__head">
-                        <h3 class="program-category__subtitle">En amont des études</h3>
-                        <h2 class="program-category__title">Programmes d’accès aux grandes Ecoles</h2>
-                        <p class="program-category__intro">Les 12 programmes Egalité des Chances ont pour objectif d’informer les jeunes de milieux modestes sur les études supérieures culturelles et artistiques et de les aider à préparer les concours d’entrée des grandes Ecoles de la Culture.</p>
-                    </div>
-
-                    <!-- Articles -->
-                    <section class="c-program-list program-category__slider">
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
-                        <article class="c-program">
-                            <div class="c-program__media">
-                                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
-                            </div>
-                            <div class="c-program__content">
-                                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-                                <h3 class="c-program__title">
-                                    <a href="/">En École d'archite-cture</a>
-                                </h3>
-                            </div>
-                        </article>
                         <article class="c-program">
                             <div class="c-program__media">
                                 <img src="http://placehold.it/314x484" alt="" class="c-program__image">
