update dropDown style

--- a/app/videos.html
+++ b/app/videos.html
@@ -158,7 +158,7 @@
                                     </span>
                                 </h3>
                                 <div id="profession" class="c-dd">
-                                	<span class="c-dd__selected">I'm kinda the label!</span>
+                                	<span class="c-dd__selected">...</span>
                                     <div class="c-dd__icon"><span class="icon icon--triangle-down"></span></div>
                                 	<ul class="c-dd__menu">
                                 		<li class="c-dd__item">I'm hidden!</li>
@@ -175,7 +175,7 @@
                                     </span>
                                 </h3>
                                 <div id="school" class="c-dd">
-                                	<span id="test" class="c-dd__selected">...</span>
+                                	<span id="test" class="c-dd__selected">I'm kinda the label!</span>
                                     <div class="c-dd__icon"><span class="icon icon--triangle-down"></span></div>
                                 	<ul class="c-dd__menu">
                                 		<li class="c-dd__item">I'm hidden!</li>
