--- a/app/video-single.html
+++ b/app/video-single.html
@@ -166,6 +166,8 @@
                             </div>
                             <div class="b-article__content">
                                 <div class="l-p">
+
+                                    <!-- Article Intro -->
                                     <div class="b-article__intro">
                                         Le concours de conservateur du patrimoine étant
                                         très sélectif, ce programme a pour but d’offrir
