update jemoriente buttons - HP

--- a/app/hp.html
+++ b/app/hp.html
@@ -341,15 +341,15 @@
                     <div class="hp-tag--tertiary__head">
                         <h2 class="hp-tag--tertiary__title">Je m'oriente<span class="c-dot"><span class="c-dot__circle"></span></span></h2>
                         <div class="hp-tag--tertiary__btns">
-                            <p class="hp-tag--tertiary__btns__title">decouvrir les</p>
+                            <!-- <p class="hp-tag--tertiary__btns__title">decouvrir les</p>
                             <a href="" class="c-btn hp-tag--tertiary__btn">
                                 <span>Métiers</span>
                             </a>
                             <a href="" class="c-btn hp-tag--tertiary__btn">
                                 <span>écoles</span>
-                            </a>
+                            </a> -->
                             <a href="" class="c-btn hp-tag--tertiary__btn">
-                                <span>champs artistiqueS</span>
+                                <span>découvrir toutes les vidéos</span>
                             </a>
                         </div>
                     </div>
