--- a/app/actualites.html
+++ b/app/actualites.html
@@ -146,7 +146,7 @@
 
                     <!-- News list -->
                     <section class="c-media-list">
-                        <article class="c-media">
+                        <!-- <article class="c-media">
                           <div class="c-media__media">
                             <img src="http://placehold.it/312x217" alt="" class="c-media__image">
                           </div>
@@ -340,13 +340,55 @@
                             </h3>
                             <p class="c-media__intro">Ce lundi 9 janvier, les élèves de quatrième du collège Guillausite de l’Ecole Duperré par le collège Guillaume Budé dasite de l’Ecole Duperré par le collège Guillaume Budé dame Budé</p>
                           </div>
-                        </article>
+                        </article> -->
                     </section>
 
                 </div>
 
             </div>
         </div>
+
+        <!-- Pagination -->
+        <section class="c-pagination">
+            <!-- Wrapper -->
+            <div class="l-content">
+                <div class="l-d l-t">
+
+                    <div class="c-pagination__body">
+                        <ul class="c-pagination__list c-pagination__list--text c-pagination__list--prev">
+                            <li class="c-pagination__item">
+                                <a href="" class="c-pagination__link">première page</a>
+                            </li>
+                            <li class="c-pagination__item">
+                                <a href="" class="c-pagination__link">préc.</a>
+                            </li>
+                        </ul>
+                        <ul class="c-pagination__list  c-pagination__list--num">
+                            <li class="c-pagination__item">
+                                <a href="" class="c-pagination__link">1</a>
+                            </li>
+                            <li class="c-pagination__item">
+                                <a href="" class="c-pagination__link">2</a>
+                            </li>
+                            <li class="c-pagination__item">
+                                <a href="" class="c-pagination__link">3</a>
+                            </li>
+                        </ul>
+                        <ul class="c-pagination__list c-pagination__list--text c-pagination__list--next">
+                        <li class="c-pagination__item">
+                            <a href="" class="c-pagination__link">suiv.</a>
+                        </li>
+                        <li class="c-pagination__item">
+                            <a href="" class="c-pagination__link">dernière page</a>
+                        </li>
+                    </ul>
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
+
     </div>
 
   </main>
