--- a/app/fondation.html
+++ b/app/fondation.html
@@ -144,11 +144,11 @@
                 <div class="b-hero__media">
                     <picture>
                         <!-- Desk img -->
-                        <source srcset="http://placehold.it/1600x495" media="(min-width: 1023px)">
+                        <source srcset="assets/images/fondation/la-fondation__desk.png" media="(min-width: 1023px)">
                         <!-- Tab img -->
-                        <source srcset="http://placehold.it/768x244" media="(min-width: 768px)">
+                        <source srcset="assets/images/fondation/la-fondation__tab.png" media="(min-width: 768px)">
                         <!-- Mob img -->
-                        <img srcset="http://placehold.it/750x350" alt="" class="b-hero__image">
+                        <img srcset="assets/images/fondation/la-fondation__mob.png" alt="" class="b-hero__image">
                     </picture>
                 </div>
 
@@ -189,12 +189,30 @@
                                 </div>
                             </div>
                             <div class="b-article__content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                                    lab
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                                        est x ea mollit anim id est laborum. asf sdaf fds fs f as fdsa dfs fsdd saf a fs afd asdf sa f sf s fsa fd s asfljdsaklfsakjf; lkajs sl kj asljdl;kj sldkjalsk jalk la;s fjsa dfs jlj fal jljkjfaslk aljlks</p>
+                                <p>
+                                    Créée en 2006, la Fondation Culture & Diversité a
+                                    pour mission de favoriser l'accès aux arts et à
+                                    la culture pour les jeunes issus de milieux modestes.
+                                    Depuis son lancement la Fondation Culture & Diversité
+                                    a un mode d’intervention « opérationnel », très spécifique
+                                    dans le paysage des fondations d’entreprise en France : avec
+                                    un seul objectif précis, elle conçoit et conduit des
+                                    programmes pérennes, sur le terrain, au sein des
+                                    établissements scolaires, élaborés en lien avec les
+                                    institutions culturelles et les grandes Ecoles de la Culture partenaires.
+                                </p>
+                                <p>
+                                    Près de <strong>28 000</strong> élèves issus d’environ
+                                    <strong>220 établissements scolaires</strong> relevant de l’éducation
+                                    prioritaire en France ont d’ores et déjà bénéficié
+                                    des programmes mis en œuvre par la
+                                    Fondation Culture & Diversité et ses partenaires
+                                    selon deux axes d'action : la Cohésion sociale et
+                                    l'Egalité des Chances. En outre, la Fondation
+                                    Culture & Diversité remet chaque année le
+                                    Prix Culture pour la Paix et le prix de
+                                    l'Audace artistique et culturelle.
+                                </p>
                             </div>
                         </div>
 
@@ -212,8 +230,14 @@
 
                             <h2 class="p-fondation__section-title p-fondation__founder__title">Le fondateur</h2>
                             <p class="p-fondation__founder__text">
-                                Lancée en 2006 par Marc Ladreit de Lacharrière, la Fondation d'entreprise Culture & Diversité prolonge l'engagement de Fimalac dans le champ de la culture et de la lutte contre les inégalités sociales. Sa création s'inscrit dans le parcours d'un entrepreneur
-                                engagé, convaincu qu'il faut mettre sa réussite et celle de son entreprise au service d'une société plus harmonieuse.
+                                Lancée en 2006 par <strong>Marc Ladreit de Lacharrière, l
+                                a Fondation d'entreprise Culture & Diversité </strong>
+                                prolonge l'engagement de Fimalac dans le champ
+                                de la culture et de la lutte contre les inégalités
+                                sociales. Sa création s'inscrit dans le parcours
+                                d'un entrepreneur engagé, convaincu qu'il faut
+                                mettre sa réussite et celle de son entreprise au
+                                service d'une société plus harmonieuse.
                             </p>
 
                         </div>
@@ -230,10 +254,10 @@
                     <div class="l-d l-p">
                         <div class="l-content--article">
 
-                            <h2 class="p-fondation__section-title p-fondation__culture__title">La Fondation Culture & Diversité en images</h2>
+                            <h2 class="p-fondation__section-title p-fondation__culture__title">La Fondation Culture <br> & Diversité en images</h2>
                             <div class="p-fondation__culture__media">
                                 <figure class="c-video">
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Z_fYQugJIUs" frameborder="0" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/dBsm8Mg2G_Y" frameborder="0" allowfullscreen></iframe>
                                 </figure>
                             </div>
 
@@ -251,16 +275,16 @@
                     <div class="l-d l-p">
                         <div class="l-content--article">
 
-                            <h2 class="p-fondation__section-title p-fondation__equality__title">Méthodologie des programmes égalité des Chances</h2>
+                            <h2 class="p-fondation__section-title p-fondation__equality__title">Méthodologie des programmes <br> égalité des Chances</h2>
                             <div class="p-fondation__equality__media">
                                 <figure class="c-video">
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Z_fYQugJIUs" frameborder="0" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/qX8aAZnFGIU" frameborder="0" allowfullscreen></iframe>
                                 </figure>
                             </div>
 
                             <!-- Download Item -->
                             <article class="b-download__item">
-                                <a href="" class="b-download__link">
+                                <a href="assets/doc/10_ans_dactions_-_finale.pdf" class="b-download__link" target="_blank">
                                     <span class="icon icon--arrow-download b-download__icon"></span>
                                     <span class="b-download__text">Télécharger le dossier des chiffres-clés</span>
                                 </a>
@@ -284,16 +308,58 @@
                                 <h2 class="p-fondation__section-title p-fondation__committee__title">Le comité de pilotage</h2>
                                 <div class="p-fondation__committee__col">
                                     <ul>
-                                        <li class="p-fondation__committee__text"><span class="p-fondation__committee__text__helper">Claire Barbillon,</span> Professeur d'histoire de l'art contemporain à l'Université de Poitiers</li>
-                                        <li class="p-fondation__committee__text"><span class="p-fondation__committee__text__helper">Jean-Francois Bourdon,</span> Proviseur du lycée général François Couperin à Fontainebleau</li>
-                                        <li class="p-fondation__committee__text"><span class="p-fondation__committee__text__helper">Emmanuel Davidenkoff,</span> Rédacteur en chef au Monde campus</li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Claire Barbillon,</span>
+                                            Professeur d'histoire de l'art contemporain à l'Université de Poitiers
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Jean-Francois Bourdon,</span>
+                                            Proviseur du lycée général François Couperin à Fontainebleau
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Emmanuel Davidenkoff,</span>
+                                            Rédacteur en chef au Monde campus
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Philippe Durey,</span>
+                                            Directeur de l'Ecole du Louvre
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Olivier Kaeppelin,</span>
+                                            Directeur de la Fondation Maeght
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Gilles Kepel,</span>
+                                            Politologue, spécialiste de l’islam et du monde arabe
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Jérôme Kohler,</span>
+                                            Politologue, spécialiste de l’islam et du monde arabe
+                                        </li>
                                     </ul>
                                 </div>
                                 <div class="p-fondation__committee__col">
                                     <ul>
-                                        <li class="p-fondation__committee__text"><span class="p-fondation__committee__text__helper">Claire Barbillon,</span> Professeur d'histoire de l'art contemporain à l'Université de Poitiers</li>
-                                        <li class="p-fondation__committee__text"><span class="p-fondation__committee__text__helper">Jean-Francois Bourdon,</span> Proviseur du lycée général François Couperin à Fontainebleau</li>
-                                        <li class="p-fondation__committee__text"><span class="p-fondation__committee__text__helper">Emmanuel Davidenkoff,</span> Rédacteur en chef au Monde campus</li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Marie-Christine Labourdette,</span>
+                                            Directrice, chargée des musées de France à la direction générale des patrimoines, ministère de la Culture et de la Communication
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Francine Mariani-Ducray,</span>
+                                            Conseiller d'Etat, membre du Conseil Supérieur de l'Audiovisuel
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Jean-Michel Ribes,</span>
+                                            Auteur, metteur en scène, directeur du théâtre du Rond-Point
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Daniel Templon,</span>
+                                            Galeriste
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Régis Wargnier,</span>
+                                            Cinéaste, membre de l'Institut
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -302,16 +368,46 @@
                                 <h2 class="p-fondation__section-title p-fondation__committee__title">L’équipe</h2>
                                 <div class="p-fondation__committee__col">
                                     <ul>
-                                        <li class="p-fondation__committee__text"><span class="p-fondation__committee__text__helper">Claire Barbillon,</span> Professeur d'histoire de l'art contemporain à l'Université de Poitiers</li>
-                                        <li class="p-fondation__committee__text"><span class="p-fondation__committee__text__helper">Jean-Francois Bourdon,</span> Proviseur du lycée général François Couperin à Fontainebleau</li>
-                                        <li class="p-fondation__committee__text"><span class="p-fondation__committee__text__helper">Emmanuel Davidenkoff,</span> Rédacteur en chef au Monde campus</li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Eléonore de Lacharrière,</span>
+                                            Déléguée générale
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Frédéric Callens,</span>
+                                            Délégué général adjoint
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Alix Gauthier,</span>
+                                            Assistante
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Lucile Arnould,</span>
+                                            Chargée de mission
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Saïd Berkane,</span>
+                                            Chargé de mission
+                                        </li>
                                     </ul>
                                 </div>
                                 <div class="p-fondation__committee__col">
                                     <ul>
-                                        <li class="p-fondation__committee__text"><span class="p-fondation__committee__text__helper">Claire Barbillon,</span> Professeur d'histoire de l'art contemporain à l'Université de Poitiers</li>
-                                        <li class="p-fondation__committee__text"><span class="p-fondation__committee__text__helper">Jean-Francois Bourdon,</span> Proviseur du lycée général François Couperin à Fontainebleau</li>
-                                        <li class="p-fondation__committee__text"><span class="p-fondation__committee__text__helper">Emmanuel Davidenkoff,</span> Rédacteur en chef au Monde campus</li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Julie Bourdel,</span>
+                                            Chargée de mission
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Monique Bouscasse,</span>
+                                            Chargée de mission
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Alix Philardeau,</span>
+                                            Chargée de mission
+                                        </li>
+                                        <li class="p-fondation__committee__text">
+                                            <span class="p-fondation__committee__text__helper">Flore Talamon,</span>
+                                            Chargée de mission
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -329,7 +425,7 @@
 
                     <!-- Title -->
                     <div class="l-d l-t l-p">
-                        <h2 class="b-related__title">
+                        <h2 class="b-related__title b-related__title--bold">
                 <span class="b-related__title--small">Actualités de la</span>
                 Fondation Culture & Diversité
               </h2>
