--- a/app/press.html
+++ b/app/press.html
@@ -204,6 +204,47 @@
 
             </div>
         </div>
+
+        <!-- Pagination -->
+        <section class="c-pagination">
+            <!-- Wrapper -->
+            <div class="l-content">
+                <div class="l-d l-t">
+
+                    <div class="c-pagination__body">
+                        <ul class="c-pagination__list c-pagination__list--text c-pagination__list--prev">
+                            <li class="c-pagination__item">
+                                <a href="" class="c-pagination__link">première page</a>
+                            </li>
+                            <li class="c-pagination__item">
+                                <a href="" class="c-pagination__link">préc.</a>
+                            </li>
+                        </ul>
+                        <ul class="c-pagination__list  c-pagination__list--num">
+                            <li class="c-pagination__item">
+                                <a href="" class="c-pagination__link">1</a>
+                            </li>
+                            <li class="c-pagination__item">
+                                <a href="" class="c-pagination__link">2</a>
+                            </li>
+                            <li class="c-pagination__item">
+                                <a href="" class="c-pagination__link">3</a>
+                            </li>
+                        </ul>
+                        <ul class="c-pagination__list c-pagination__list--text c-pagination__list--next">
+                        <li class="c-pagination__item">
+                            <a href="" class="c-pagination__link">suiv.</a>
+                        </li>
+                        <li class="c-pagination__item">
+                            <a href="" class="c-pagination__link">dernière page</a>
+                        </li>
+                    </ul>
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
     </div>
 
   </main>
